kubernetes/apps/observability/unpoller/app/network.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: unifi
spec:
  hostnames:
    - "unifi.internal.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: external-unifi
          port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: external-unifi
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-unifi
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.254.1
    ports:
      - port: 443
